# skyassist

./: .env  pyproject.toml
app/: config.py  main.py
app/ai/: assistant.py  data.txt  llm.py  main_agent.py  rag.py  tools.py
app/models/: flight_model.py  history_model.py  user_model.py
app/routes/: add_flights_schedule.py
